# ChangeLog for x11-base/xorg-server
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-base/xorg-server/ChangeLog,v 1.30 2005/08/21 13:15:55 lu_zero Exp $

  21 Aug 2005; Luca Barbato <lu_zero@gentoo.org>
  xorg-server-0.99.1-r4.ebuild:
  Marked ~ppc

  21 Aug 2005; Donnie Berkholz <spyderous@gentoo.org>;
  -files/xorg-composite.patch, -files/xorg-server-fbmmx-local.patch,
  -xorg-server-0.99.1.ebuild, -xorg-server-0.99.1-r1.ebuild,
  -xorg-server-0.99.1-r2.ebuild, -xorg-server-0.99.1-r3.ebuild:
  Drop old versions.

*xorg-server-0.99.1-r4 (21 Aug 2005)

  21 Aug 2005; Donnie Berkholz <spyderous@gentoo.org>;
  +xorg-server-0.99.1-r4.ebuild:
  Update to today's CVS. This adds a USE flag for xprint. Also, get rid of the
  glx USE flag, because everybody should get it.

  20 Aug 2005; Donnie Berkholz <spyderous@gentoo.org>;
  xorg-server-0.99.1.ebuild, xorg-server-0.99.1-r1.ebuild,
  xorg-server-0.99.1-r2.ebuild, xorg-server-0.99.1-r3.ebuild:
  panoramixproto moved to xineramaproto.

  17 Aug 2005; Donnie Berkholz <spyderous@gentoo.org>;
  +files/xorg-server-fbmmx-local.patch, xorg-server-0.99.1-r3.ebuild:
  (fd.o #4073) Fix compilation failures at fbmmx.c. Patch from Diego Pettenó
  <flameeyes@gentoo.org>.

  16 Aug 2005; Donnie Berkholz <spyderous@gentoo.org>;
  xorg-server-0.99.1-r3.ebuild:
  Wrap opengl things in `if use glx..`

  15 Aug 2005; Herbie Hopkins <herbs@gentoo.org>
  xorg-server-0.99.1-r3.ebuild:
  Marked ~amd64.

  14 Aug 2005; Donnie Berkholz <spyderous@gentoo.org>;
  +files/xorg-server-0.99.1-x86_64-1.patch, xorg-server-0.99.1-r3.ebuild:
  Add xorg-server-0.99.1-x86_64-1.patch to fix configure.ac on amd64.

  14 Aug 2005; Donnie Berkholz <spyderous@gentoo.org>;
  xorg-server-0.99.1-r3.ebuild:
  Wrap pkg_postrm() module dir removal in ! has_version.

  12 Aug 2005; Donnie Berkholz <spyderous@gentoo.org>;
  xorg-server-0.99.1-r3.ebuild: