@@ -1,6 +1,6 @@
-MD5 121e05ee6b0a40e8e7572be833393257 ChangeLog 5595
-MD5 b39471d395149bf6ab2c3aaa83108962 xorg-server-0.99.1-r4.ebuild 3596
-MD5 c701b68bb6d7f5d733fc97598b9c60e6 files/digest-xorg-server-0.99.1-r4 237
-MD5 b74f0fa343d7769d89aec580ae334f4d files/check-for-glproto.patch 876
+MD5 134fb90e84a01192292df4991386bf37 ChangeLog 5725
+MD5 c260994b130937c580724129501918cc xorg-server-0.99.1-r4.ebuild 3644
 MD5 cda95e8d1c7c9540a7619dbe007c125d files/fix-xf86misc-typo.patch 615
+MD5 b74f0fa343d7769d89aec580ae334f4d files/check-for-glproto.patch 876
 MD5 15b113cf1db95c72eb12426c0f2bf9ae files/xorg-server-0.99.1-x86_64-1.patch 452
+MD5 c701b68bb6d7f5d733fc97598b9c60e6 files/digest-xorg-server-0.99.1-r4 237
