@@ -1,6 +1,10 @@
 # ChangeLog for x11-base/xorg-server
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-base/xorg-server/ChangeLog,v 1.30 2005/08/21 13:15:55 lu_zero Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-base/xorg-server/ChangeLog,v 1.31 2005/08/21 22:00:15 spyderous Exp $
+
+  21 Aug 2005; Donnie Berkholz <spyderous@gentoo.org>;
+  xorg-server-0.99.1-r4.ebuild:
+  xprint build is broken; force it off.
 
   21 Aug 2005; Luca Barbato <lu_zero@gentoo.org>
   xorg-server-0.99.1-r4.ebuild:
